# rag-toolkit

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  conftest.py  pyproject.toml  requirements-gpu.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  integration.yml  release.yml
benchmarks/baseline/: README.md  config.json  qa.jsonl  run.py
benchmarks/baseline/corpus/: logistics-manual.md  parcours-siia.md  quarterly-report.md  security-policy.md
docs/: DR-0001-chunk-index.md  GUIDE.md
docs/decisions/: DR-0003-tuning-and-caching.md  DR-0004-corpus-and-representations.md  DR-0005-corpus-owns-all-storage.md
docs/guide/: 01-getting-started.md  02-concepts-and-architecture.md  03-data-contracts.md  04-ingestion-and-chunking.md  05-representations-and-storage.md  06-retrieval-and-refinement.md  07-generation-and-citations.md  08-pipelines.md  09-extending-and-testing.md  10-recipes.md  11-evaluation-and-tuning.md  README.md
examples/: .env.example  quickstart.py
rag_blocks/: __init__.py  cli.py  pipeline.py
rag_blocks/chunking/: __init__.py  base.py  fixed.py  markdown.py  markdown_fixed.py
rag_blocks/core/: __init__.py  component.py  contracts.py  errors.py  registry.py
rag_blocks/embedding/: __init__.py  caching.py  sentence_transformer.py  sparse.py
rag_blocks/enrichment/: contextual.py  heading.py
rag_blocks/evaluation/: __init__.py  base.py  builder.py  cost.py  ir_metrics.py  judge_cache.py  leaderboard.py  ragas_evaluator.py  space.py  spec_io.py  trial.py  trial_log.py  tuning.py
rag_blocks/generation/: __init__.py  anthropic_generator.py  base.py  extractive.py  openrouter_generator.py  packing.py
rag_blocks/indexing/: __init__.py  catalog.py  chunk_index.py  corpus.py  representation.py  sink.py
rag_blocks/ingestion/: __init__.py  detection.py
rag_blocks/ingestion/ocr/: __init__.py  base.py  google_docai.py  mistral.py
rag_blocks/ingestion/parsers/: __init__.py  auto.py  base.py  docling_parser.py  plaintext.py
rag_blocks/refinement/: __init__.py  cross_encoder.py  keyword.py  neighbor.py  threshold.py
rag_blocks/retrieval/: __init__.py  fusion_retriever.py  hybrid.py  index_retriever.py  query_shaping.py
rag_blocks/storage/: __init__.py  base.py  bm25_index.py  filters.py  local.py  memory_store.py  minio_store.py  qdrant_store.py  vector_store.py
rag_blocks/studio/: __init__.py  manifest.py  server.py
rag_toolkit/: __init__.py  pipeline.py
rag_toolkit/core/: __init__.py  contracts.py  errors.py  registry.py
rag_toolkit/embedding/: __init__.py  base.py  hashing.py  sentence_transformer.py  sparse.py
rag_toolkit/enrichment/: __init__.py  base.py  contextual.py  noop.py
rag_toolkit/generation/: __init__.py  anthropic_generator.py  packing.py
rag_toolkit/indexing/: __init__.py  chunk_index.py
rag_toolkit/refinement/: base.py  cross_encoder.py  neighbor.py  threshold.py
rag_toolkit/reranking/: __init__.py  base.py  bge.py  keyword.py  noop.py
rag_toolkit/retrieval/: __init__.py  base.py  bm25.py  dense.py  fusion.py  hybrid.py
rag_toolkit/storage/: __init__.py  bm25_index.py  lexical_index.py  memory_store.py  minio_store.py  qdrant_store.py  vector_store.py
studio/: README.md
studio/app/: index.html  package-lock.json  package.json  vite.config.ts
studio/app/public/: blocks.json
studio/app/src/: App.tsx  index.css
studio/app/src/graph/: BlockNode.tsx  CorpusNode.tsx  EndpointNode.tsx  corpus.ts  endpoints.ts  model.ts  ports.ts  store-slot.ts  store.ts  validate.test.ts  validate.ts  wire.test.ts  wire.ts
studio/app/src/manifest/: load.ts  types.ts
studio/app/src/panels/: Inspector.tsx  Palette.tsx  StatusPill.tsx
studio/app/src/spec/: compile.test.ts  compile.ts  importSpec.ts  validateSpec.test.ts  validateSpec.ts
studio/app/src/theme/: tokens.ts
studio/tools/: build_manifest.py
tests/: contract_checks.py  helpers.py  test_exports.py  test_pipeline.py  test_query_pipeline.py  test_rag_pipeline.py
tests/chunking/: test_fixed_chunker.py  test_markdown_chunker.py  test_markdown_fixed_chunker.py
tests/core/: test_component.py  test_contracts.py  test_registry.py
tests/embedding/: test_caching_embedder.py  test_hashing_embedder.py
tests/enrichment/: test_enrichers.py
tests/evaluation/: test_builder.py  test_cost.py  test_ir_metrics.py  test_judge_cache.py  test_leaderboard.py  test_ragas_evaluator.py  test_space.py  test_spec_io.py  test_trial_log.py  test_tuning.py
tests/generation/: test_anthropic_complete.py  test_extractive_generator.py  test_openrouter.py
tests/indexing/: test_chunk_index.py  test_corpus.py  test_document_catalog.py  test_representations.py
tests/ingestion/: test_auto_parser.py  test_detection.py  test_docling_routing.py  test_plaintext_parser.py
tests/integration/: test_anthropic_generator.py  test_bge_reranker.py  test_contextual_enricher.py  test_cross_encoder_refiner.py  test_docling_pdf.py  test_minio_integration.py  test_openrouter_generator.py  test_qdrant_store.py  test_sentence_transformer_embedder.py
tests/refinement/: test_keyword_refiner.py  test_neighbor_expander.py  test_threshold.py
tests/reranking/: test_keyword_reranker.py  test_noop_reranker.py
tests/retrieval/: test_bm25_retriever.py  test_dense_retriever.py  test_fusion_retriever.py  test_hybrid_retriever.py  test_index_retriever.py  test_query_shaping.py
tests/storage/: test_bm25_index.py  test_filters.py  test_local_blob_store.py  test_memory_store.py  test_minio_store.py
tests/studio/: test_manifest.py  test_server.py
