[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-toolkit"
version = "0.1.0"
description = "Composable building blocks for production RAG pipelines, with an auto-tuning evaluation suite."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Mohamed Elamine Bentarzi" }]
keywords = ["rag", "retrieval", "llm", "docling", "ocr", "evaluation", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Deliberately empty: the core (contracts, registry, component model,
# detection, plaintext parsing) runs on the stdlib alone. Heavy vendor
# dependencies live behind extras so users only install what they route to.
dependencies = []

[project.optional-dependencies]
docling = ["docling>=2.15", "pypdfium2>=4.30"]
mistral = ["mistralai>=1.2"]
google = ["google-cloud-documentai>=2.30"]
minio = ["minio>=7.2"]
sentence-transformers = ["sentence-transformers>=3.0"]
qdrant = ["qdrant-client>=1.10"]
all = ["rag-toolkit[docling,mistral,google,minio,sentence-transformers,qdrant]"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "mypy>=1.11"]

[project.urls]
Homepage = "https://github.com/voidlab/rag-toolkit"

[tool.hatch.build.targets.wheel]
packages = ["rag_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run = fast + hermetic. Integration tests (real docling/OCR stacks)
# are opt-in:  pytest -m integration
addopts = "-m 'not integration' -q"
markers = [
    "integration: exercises optional heavy dependencies or external services",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
