[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "rag-blocks"
version = "0.7.0"
description = "Composable building blocks for production RAG pipelines, with an auto-tuning evaluation suite."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Mohamed Elamine Bentarzi" }]
keywords = ["rag", "retrieval", "llm", "docling", "ocr", "evaluation", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Deliberately empty: the core (contracts, registry, component model,
# detection, plaintext parsing) runs on the stdlib alone. Heavy vendor
# dependencies live behind extras so users only install what they route to.
dependencies = []

[project.optional-dependencies]
docling = ["docling>=2.15", "pypdfium2>=4.30"]
mistral = ["mistralai>=1.2"]
google = ["google-cloud-documentai>=2.30"]
minio = ["minio>=7.2"]
sentence-transformers = ["sentence-transformers>=3.0"]
qdrant = ["qdrant-client>=1.10"]
anthropic = ["anthropic>=0.40"]
# The LLM-judged evaluator. Everything else in the evaluation suite — IR
# metrics, answer matching, tuners, the trial log (stdlib sqlite3) — is
# dependency-free by design, so a judge is the only part you must opt into.
ragas = ["ragas>=0.2"]
all = [
    "rag-blocks[docling,mistral,google,minio,sentence-transformers,qdrant,anthropic,ragas]"
]
# ruff is capped: 0.16 changed default rules (isort I001, C408) and would flag
# the whole tree; bump the cap deliberately after conforming, not by accident.
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6,<0.16", "mypy>=1.11"]

[project.scripts]
# `rag-blocks studio` launches the optional visual pipeline builder from the
# bundled static build. Stdlib-only launcher; needs no Node at runtime.
rag-blocks = "rag_blocks.cli:main"

[project.urls]
Homepage = "https://github.com/MohamedElamineBentarzi/rag-blocks"
Repository = "https://github.com/MohamedElamineBentarzi/rag-blocks"
Documentation = "https://github.com/MohamedElamineBentarzi/rag-blocks/tree/main/docs/guide"
Changelog = "https://github.com/MohamedElamineBentarzi/rag-blocks/blob/main/CHANGELOG.md"
Issues = "https://github.com/MohamedElamineBentarzi/rag-blocks/issues"

[tool.hatch.build.targets.wheel]
packages = ["rag_blocks"]
# Studio's built static app is placed in rag_blocks/studio/_dist by the release
# step (`npm run build` -> copy), then shipped as package data so `rag-blocks
# studio` works from a plain `pip install`. The dir is gitignored (a build
# artifact), so `artifacts` is what forces it into the wheel when present; when
# absent (a normal dev build) nothing is included and the CLI says how to build.
artifacts = ["rag_blocks/studio/_dist/**"]

[tool.hatch.build.targets.sdist]
# Same artifact on the sdist: `python -m build` builds the wheel FROM the sdist,
# so if _dist isn't in the sdist it can't reach the wheel. (gitignored, hence
# `artifacts` rather than plain includes.)
artifacts = ["rag_blocks/studio/_dist/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run = fast + hermetic. Integration tests (real docling/OCR stacks)
# are opt-in:  pytest -m integration
addopts = "-m 'not integration' -q"
markers = [
    "integration: exercises optional heavy dependencies or external services",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
